assets/css/style.css
/* ... */
#menu li {
    border-top: var(--border-color) solid 2px;
    padding: 10px;
}

#menu li h3 {
    margin: 0;
    width: 100%;
}

#menu li a {
    display: flex;
    align-items: flex-end;
    margin-right: 10px;
}

#hamburger-menu-container {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin-right: 10px;
}


#hamburger-menu-icon span {
    font-size: 3em;
    color: var(--heading-color);
}

#hamburger-menu-toggle:checked~nav {
    /*Menu displays when the checkbox is pressed*/
    display: block;
    top: 100%;
    transition: all 0.3s;
}

/*Main content*/
/*General styles*/
main {
    background-color: var(--background-color);
    /*Makes the main element take up any unused space*/
    flex: 1 0 auto;
    /*Pushes the content under the header*/
    padding-top: 60px;
}

/*index.html styles*/
/*Classes*/
.text-container{
    display: block;
    width: 80%;
    height: min-content;
    max-width: 1100px;
    padding-bottom: 2rem;
    margin: auto;
}

.hero-image-overlay {
    background-image: linear-gradient(to right, var(--overlay-color), rgba(0, 0, 0, 0));
    width: 100%;
    height: 100%;
}

.hero-button-container {
    display: flex;
    max-width: 500px;
    padding-bottom: 25px;
}


.hero-button h4 {
    width: fit-content;
    margin-top: 2rem;
    margin-right: 15px;
    padding: 10px;
    background-color: #eff0f3;
    color: #0d0d0d !important;
    font-weight: bold;
    border-radius: 15px;
    /*Hover effect*/
    transition: all 0.2s ease-out;
}

/*Hover effect*/
.hero-button:hover h4 {
    transform: scale(1.1);
    border-radius: 20px;
    transition: all 0.2s ease-out;
}

.mission-item {
    min-width: 200px;
    max-width: 200px;
    aspect-ratio: 1;
    border-radius: 10px;
    border: 3px solid #0d0d0d;
    background-color: var(--accent-color);
    margin: 40px;
    background-size: 160%;
    background-position: center;
    /*Transition on hover*/
    transition: all 0.5s ease-out;
}

div .mission-item:nth-child(1) {
    background-image: url("../images/leopard_gecko_index_care.jpg");
}

div .mission-item:nth-child(2) {
    background-image: url("../images/leopard_gecko_index_why.jpg");
    background-position: 30%;

}

div .mission-item:nth-child(3) {
    background-image: url("../images/leopard-gecko-index-rescue.jpg");
    background-position: 10% 10%;
}

/*Hover effect*/
.mission-item:hover {
    background-size: 200%;
    transition: all 0.5s ease-out;
}

.mission-item div * {
    padding: 0.5rem;
}

.mission-item div p,
.mission-item div h2 {
    color: #eff0f3;
}

.mission-button {
    height: 33%;
    display: block;
    background-color: var(--darken-color);
    transition: all 0.5s;
}

.mission-button h3 {
    color: #eff0f3;
}

.image-grid {
    height: 100%;
    display: grid;
    justify-items: center;
}


.image-grid img {
    width: 100%;
    height: 100%;
    padding: 5px;
    aspect-ratio: 10/7;
    border: var(--heading-color) solid 2px;
    object-fit: cover;
}

/*IDs*/
#hero {
    width: 100%;
    /*background*/
    background: url("../images/hero.webp") center center/cover;
    /*Fallback in case image doesn't load*/
    background-color: var(--accent-color);
    border-bottom: 2px solid var(--border-color);
}

#hero-text {
    max-width: 500px;
    width: 90%;
    padding-top: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 5vw;
    color: #0d0d0d;
}

#hero-text h2,
#hero-text h4 {
    color: #eff0f3;
}

#mission {
    height: fit-content;
}

#mission-item-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

#who-we-are-container {
    display: flex;
    justify-content: center;
}

#who-we-are{
    background-color: var(--accent-color);
    padding-top: 30px;
}

#who-we-are a h3{
    margin-top: 30px;
    background-color: #eff0f3;
    color: #0d0d0d;
    padding: 20px;
    text-align: center;
    border-radius: 15px;
    /*Transition settings*/
    transition: all 0.2s;
}

#who-we-are a h3:hover{
    border-radius: 30px;
    transform: scale(1.1);
    /*Transition settings*/
    transition: all 0.2s;
}

#who-we-are-grid div{
    margin: 30px;
    margin-top: 0;
}

#who-we-are-image img{
    max-width: 400px;
}

/*Guide page styles*/
/*Classes*/
/*Button effects*/
.link-button{
    position: relative;
    height: 24px;
    box-sizing: content-box;
    font-size: 1.2em;
    width: 90%;
    padding: 1em;
    border-radius: 10px;
    background-color: var(--accent-color);
    margin-left: 0;
    transition: all 0.3s ease-out;

    margin: 10px;
}

.link-button:hover{
    border-radius: 15px;
    margin-left: 20px;
    transition: all 0.3s ease-out;
}

.link-button-arrow{
    display: none;
}

.link-button-text{
    height: 28px;
    margin-right: 0;
    transition: all 0.3s ease-out;
}

.link-button:hover .link-button-text{
    margin-right: 10px;
    transition: all 0.3s ease-out;
}

.link-button:hover > a span{
    display: inline;
}

/*IDs*/
#guide-intro{
    margin-top: 80px;
}

#guide-button-container{
    max-width: 585px;
    margin: auto;
}

/*404 page styles*/

#section-404 {
    margin: 50px;
}

#text-404 {
    text-align: center;
    text-decoration: underline;
    text-underline-offset: 5px;
    text-decoration-thickness: 5px;
}

#image-404{
    margin-top: 20px;
}

#button-404 {
    text-align: center;
    margin-top: 2em;
    font-size: 1.2em;
    width: fit-content;
    padding: 1em;
    border-radius: 10px;
    background-color: var(--accent-color);
    transition: all 0.3s ease-out;
}

#button-404:hover {
    border-radius: 15px;
    transition: all 0.3s ease-out;
    transform: scale(1.1);
}


/*Footer*/
/*Generic elements*/
footer {
    background-color: var(--background-color);
    border-top: 2px solid var(--border-color);
}

footer hr {
    width: 90%;
    align-self: center;
    margin: auto;
    border-bottom: 2px solid var(--paragraph-color);
}
/* ... */

